# pfmt

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements-dev.txt
.githooks/: pre-commit  pre-push
.github/: CONTRIBUTING.md  SECURITY.md  copilot-instructions.md
.github/workflows/: ci.yml  test.yml  update-template.yml
apps/app_admin/: .env.example  README.md  pyproject.toml
apps/app_admin/app/: main.py  settings.py
apps/app_admin/app/api/: routes.py
apps/app_admin/tests/: test_admin_service.py  test_settings.py
apps/app_nippon_rfq_matching/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rfq-parser.conf
apps/app_nippon_rfq_matching/.github/workflows/: deploy.yml
apps/app_nippon_rfq_matching/app/: main.py
apps/app_nippon_rfq_matching/app/api/: ais_manager.py  competitor.py  competitor_color.py  dependencies.py  files.py  jobs.py  normalization.py  normalization_cache.py  pdf.py  pdf_export.py  query.py  quotation_jobs.py  quotation_pdf.py  quotation_stats.py  security.py  semantic.py  table_results.py  tickets.py  tokenization.py  upload.py
apps/app_nippon_rfq_matching/app/core/: config.py  database.py  logging_config.py
apps/app_nippon_rfq_matching/app/middleware/: auth_middleware.py
apps/app_nippon_rfq_matching/app/models/: __init__.py  base.py  competitor.py  database.py  pricing.py  rfq.py  schemas.py  ticket.py
apps/app_nippon_rfq_matching/app/schemas/: quotation_stats.py
apps/app_nippon_rfq_matching/app/services/: ais_auth_service.py  ais_manager_service.py  competitor_color_excel_service.py  competitor_color_service.py  competitor_service.py  embedding_service.py  embeddings.py  hybrid_matching.py  job_service.py  matching.py  matching_data_service.py  openai_normalization.py  pdf_comparison_export_service.py  pdf_service.py  quotation_matching_service.py  quotation_pdf_service.py  quotation_service.py  rfq_competitor_matching.py  rfq_service.py  semantic_matching.py  ticket_generation_service.py  tokenization_service.py  vector_store.py
apps/app_nippon_rfq_matching/app/services/pdf_comparison/: __init__.py  base.py  competitor_matcher.py  exporter.py  matcher.py  nippon_matcher.py  no_match.py  normalization.py
apps/app_nippon_rfq_matching/app/utils/: competitor_matrix_reader.py  csv_storage.py  eml_parser.py  extract_and_route_rfq_pdf_parser.py  iatp_parser.py  llamaparse_parser.py  parse_text_and_table_pdf_plumber.py  parsers.py  pdf_plumber_parsing_rfq_2.py  performance.py  resilience.py  rfq_columbia_parser.py  rfq_drylog_parser.py  rfq_excel_ceru_parser.py  rfq_indonesia_parser.py  rfq_onesea_parser.py  rfq_suntech_parser.py  rfq_zo_paint_parser.py  route_excel_upload.py  text_normalization.py  vendor_parsing_from_pdf.py
apps/app_nippon_rfq_matching/cert/: __visiongroup_co.crt  __visiongroup_co.p7b  visiongroup.key
apps/app_nippon_rfq_matching/migrations/: add_color_to_cache.py  add_color_to_rfq_items.py  add_embeddings_to_cache.py  add_nippon_product_name_to_equivalents.py  add_normalization_cache.py  add_pricing_tables.py  add_product_nippon_id_to_equivalents.py  add_unique_constraint_product_master.py  add_unique_constraint_rfq_items.py  add_updated_at_to_rfq_items.py  check_duplicates.py  check_product_duplicates.py  flush_competitor_data.py  recreate_product_equivalents_direct.py
apps/app_nippon_rfq_matching/tests/: test_competitor_color_mapping.py  test_iatp_multi_region.py  test_iatp_pricing.py  test_normalization.py  test_quotation_api.py  test_quotation_endpoints.py  test_quotation_integration.py
apps/app_sample/: .env.example  README.md  pyproject.toml
apps/app_sample/app/: main.py  settings.py
apps/app_sample/app/api/: routes.py
apps/app_sample/tests/: test_health.py  test_settings.py
common/: README.md  pyproject.toml
common/python/: README.md  __init__.py  config.py  logger.py  models.py  testing.py
docs/: README.md
scripts/: bootstrap.sh
