[project]
name = "pfmt"
version = "0.0.0"
description = "Python backend monorepo root."
requires-python = "==3.12.8"
dependencies = []

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "httpx==0.28.1",
    "ruff==0.11.5",
    "commitizen==3.29.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["common", "apps/*"]
exclude = ["apps/__pycache__"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# Migrated legacy app: tolerate long lines from existing docstrings/log/SQL strings.
"apps/app_nippon_rfq_matching/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.commitizen]
name = "cz_customize"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
    "apps/app_sample/app/version.py",
    "apps/app_admin/app/version.py",
    "apps/app_nippon_rfq_matching/app/version.py",
    "common/python/__init__.py",
]

[tool.commitizen.customize]
message_template = "{{change_type}}{% if scope %}({{scope}}){% endif %}: {{message}}"
schema_pattern = "(feat|fix|chore)(\\(.+\\))?: .+"
bump_pattern = "^(feat|fix)"
bump_map = {"feat" = "MINOR", "fix" = "PATCH"}

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
message = "Type of change"
choices = [
    {value = "feat", name = "feat:  a new feature"},
    {value = "fix", name = "fix:   a bug fix"},
    {value = "chore", name = "chore: housekeeping, no src or test changes"},
]

[[tool.commitizen.customize.questions]]
type = "list"
name = "scope"
message = "Scope of change"
choices = [
    {value = "repo", name = "repo: cross-cutting or root-level"},
    {value = "services", name = "service in apps: specify in description later"},
    {value = "common", name = "common: shared modules"},
    {value = "docs", name = "docs: documentation only"},
    {value = "ci", name = "ci: hooks, workflows, automation"},
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "Commit message:"
