[project]
name = "common-python"
version = "0.1.0"
description = "Shared Python modules for backend services."
requires-python = "==3.12.8"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common.python"]

[tool.setuptools.package-dir]
"common.python" = "python"
