[project]
name = "app-nippon-rfq-matching"
version = "0.1.0"
description = "Nippon RFQ matching service."
requires-python = "==3.12.8"
dependencies = [
    "aiosqlite>=0.20.0",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "antlr4-python3-runtime>=4.9.3",
    "anyio>=4.12.1",
    "asttokens>=3.0.1",
    "attrs>=25.4.0",
    "beautifulsoup4>=4.14.3",
    "certifi>=2026.2.25",
    "cffi>=2.0.0",
    "chardet>=7.2.0",
    "charset-normalizer>=3.4.6",
    "click>=8.3.1",
    "colorlog>=6.10.1",
    "comm>=0.2.3",
    "cryptography>=46.0.5",
    "debugpy>=1.8.20",
    "decorator>=5.2.1",
    "deepsearch-glm>=1.0.0",
    "defusedxml>=0.7.1",
    "dill>=0.4.1",
    "distro>=1.9.0",
    "et-xmlfile>=2.0.0",
    "executing>=2.2.1",
    "faiss-cpu>=1.13.2",
    "faker>=40.11.0",
    "fastapi>=0.115.12",
    "filelock>=3.25.2",
    "filetype>=1.2.0",
    "fsspec>=2026.2.0",
    "h11>=0.16.0",
    "hf-xet>=1.4.2",
    "httpcore>=1.0.9",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "idna>=3.11",
    "imageio>=2.37.3",
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "ipython-pygments-lexers>=1.1.1",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jiter>=0.13.0",
    "joblib>=1.5.3",
    "jsonlines>=3.1.0",
    "jsonref>=1.1.0",
    "jsonschema>=4.26.0",
    "jsonschema-specifications>=2025.9.1",
    "jupyter-client>=8.8.0",
    "jupyter-core>=5.9.1",
    "latex2mathml>=3.79.0",
    "lazy-loader>=0.5",
    "lxml>=5.4.0",
    "markdown-it-py>=4.0.0",
    "marko>=2.2.2",
    "markupsafe>=3.0.3",
    "matplotlib-inline>=0.2.1",
    "mdurl>=0.1.2",
    "mpire>=2.10.2",
    "mpmath>=1.3.0",
    "multiprocess>=0.70.19",
    "nest-asyncio>=1.6.0",
    "networkx>=3.6.1",
    "ninja>=1.13.0",
    "numpy>=2.2.0",
    "omegaconf>=2.3.0",
    "openai>=2.29.0",
    "openpyxl>=3.1.5",
    "packaging>=26.0",
    "pandas>=3.0.1",
    "parso>=0.8.6",
    "pdfminer-six>=20251230",
    "pdfplumber>=0.11.9",
    "pexpect>=4.9.0",
    "pillow>=10.4.0",
    "platformdirs>=4.9.4",
    "pluggy>=1.6.0",
    "polyfactory>=3.3.0",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.2.2",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pyclipper>=1.4.0",
    "pycparser>=3.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.13.1",
    "pygments>=2.19.2",
    "pylatexenc>=2.10",
    "pypdfium2>=4.30.0",
    "python-bidi>=0.6.7",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "python-pptx>=1.0.2",
    "pytz>=2026.1.post1",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "rapidfuzz>=3.14.3",
    "referencing>=0.37.0",
    "regex>=2026.2.28",
    "reportlab>=4.2.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "rpds-py>=0.30.0",
    "rtree>=1.4.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "semchunk>=3.2.5",
    "shapely>=2.1.2",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.8.3",
    "sqlalchemy>=2.0.36",
    "stack-data>=0.6.3",
    "sympy>=1.14.0",
    "tabulate>=0.10.0",
    "threadpoolctl>=3.6.0",
    "tifffile>=2026.3.3",
    "tokenizers>=0.22.2",
    "tornado>=6.5.5",
    "tqdm>=4.67.3",
    "traitlets>=5.14.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "typer>=0.21.2",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.3",
    "urllib3>=2.6.3",
    "uvicorn[standard]>=0.32.0",
    "uvloop>=0.22.1",
    "watchfiles>=1.1.1",
    "wcwidth>=0.6.0",
    "websockets>=16.0",
    "xlsxwriter>=3.2.9",
    # Linux/non-macOS only
    "weasyprint>=68.1 ; sys_platform != 'darwin'",
    # macOS-only platform bindings
    "appnope>=0.1.4 ; sys_platform == 'darwin'",
    "pyobjc-core>=12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa>=12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-coreml>=12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-quartz>=12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-vision>=12.1 ; sys_platform == 'darwin'",
    # Workspace dep
    "common-python",
]

[tool.uv]
package = false

[tool.uv.sources]
common-python = { workspace = true }
